Configure scripted